force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To track which competitor won the deal</description>
    <inlineHelpText>If applicable, name the competitor to whom the deal was lost.</inlineHelpText>
    <label>Lost to Competitor (Name)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>