force-app/main/default/objects/Opportunity/fields/M_Metrics__c.field-meta.xml
<CustomField>
    <fullName>M_Metrics__c</fullName>
    <inlineHelpText>These are the quantifiable values that our solution can provide to our customer (e.g. return on investment, timeline, cost savings)</inlineHelpText>
    <label>M - Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>