force-app/main/default/objects/Opportunity/fields/Manager_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast_Category__c</fullName>
    <description>used for kluster forecast</description>
    <label>Manager Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>