force-app/main/default/objects/Opportunity/fields/Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount__c</fullName>
    <description>The maximum Discount % from all opportunity products</description>
    <inlineHelpText>State the maximum allowable discount percentage for the deal.</inlineHelpText>
    <label>Max Discount %</label>
    <summarizedField>OpportunityLineItem.Discount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>