force-app/main/default/objects/Opportunity/fields/Max_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Type__c</fullName>
    <label>Max Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Free First Hire</fullName>
            </value>
            <value>
                <fullName>Startup Offer</fullName>
            </value>
            <value>
                <fullName>Oyster for Impact</fullName>
            </value>
            <value>
                <fullName>&quot;HR Transform Attendee&quot;</fullName>
            </value>
            <value>
                <fullName>Competitive Discount</fullName>
            </value>
            <value>
                <fullName>Service Delivery Rectification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Low salary discount</fullName>
            </value>
            <value>
                <fullName>Oyster for Refugee</fullName>
            </value>
            <value>
                <fullName>Partnership Discount</fullName>
            </value>
            <value>
                <fullName>VC Partners</fullName>
            </value>
            <value>
                <fullName>Volume Discount</fullName>
            </value>
            <value>
                <fullName>2022 Year End Promo - $699 countries only</fullName>
            </value>
            <value>
                <fullName>$399 Price Lock</fullName>
            </value>
            <value>
                <fullName>Partner Buy 2 / 1 Free</fullName>
            </value>
            <value>
                <fullName>Partnerships Discount - 20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>