force-app/main/default/objects/Opportunity/fields/Meeting_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created at request of Alex Berry</description>
    <inlineHelpText>The Salesforce User who booked the meeting</inlineHelpText>
    <label>Meeting Booked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>