force-app/main/default/objects/Opportunity/fields/Meeting_Booked_By_FN__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_By_FN__c</fullName>
    <formula>Meeting_Booked_By__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked By FN</label>
    <type>Text</type>
</CustomField>