force-app/main/default/objects/Opportunity/fields/Meeting_Date_Time_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_Time_Time_Zone__c</fullName>
    <description>Time zone for Meeting Date/Time (UTC)</description>
    <label>Meeting Date/Time Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>GMT</fullName>
            </value>
            <value>
                <fullName>CET</fullName>
            </value>
            <value>
                <fullName>EET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>