force-app/main/default/objects/Opportunity/fields/Meeting_Date_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_Time_UTC__c</fullName>
    <description>Populated by &quot;Opportunity - Check &quot;Product Specialist needed&quot; from Button&quot; flow</description>
    <label>Meeting Date/Time (UTC)</label>
    <type>DateTime</type>
</CustomField>