force-app/main/default/objects/Opportunity/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <description>Created at request of Alex Berry</description>
    <inlineHelpText>Outcome of the meeting</inlineHelpText>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>