force-app/main/default/objects/Opportunity/fields/Meeting_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set_Date__c</fullName>
    <description>Created at request of Alex Berry</description>
    <inlineHelpText>Date the meeting was set for</inlineHelpText>
    <label>Meeting Set Date</label>
    <type>Date</type>
</CustomField>