force-app/main/default/objects/Opportunity/fields/Meeting_Status_Demodesk__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status_Demodesk__c</fullName>
    <description>Automatically updated by demodesk</description>
    <label>Meeting Status (Demodesk)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>