force-app/main/default/objects/Opportunity/fields/Meetings_Required__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Required__c</fullName>
    <inlineHelpText>Number of meetings / calls required to close the deal</inlineHelpText>
    <label>Meetings Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meetings_Required</valueSetName>
    </valueSet>
</CustomField>