force-app/main/default/objects/Opportunity/fields/Months_Btw_Close_First_Assisted_Setup__c.field-meta.xml
<CustomField>
    <fullName>Months_Btw_Close_First_Assisted_Setup__c</fullName>
    <description>The number of months between the Opportunity Close Date and the Customer&apos;s First Assisted Setup Date.</description>
    <formula>(MONTH(CloseDate) + (12*(YEAR(CloseDate)-YEAR(Account.Customer_First_Assisted_Setup_Date__c))) - MONTH(Account.Customer_First_Assisted_Setup_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of months between the Opportunity Close Date and the Customer&apos;s First Assisted Setup Date.</inlineHelpText>
    <label>Months Btw Close &amp; First Assisted Setup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>