force-app/main/default/objects/Opportunity/fields/N_Risks_and_Blockers__c.field-meta.xml
<CustomField>
    <fullName>N_Risks_and_Blockers__c</fullName>
    <description>N. Risks and Blockers for opps</description>
    <inlineHelpText>N. Risks and Blockers for opps</inlineHelpText>
    <label>N. Risks and Blockers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>