force-app/main/default/objects/Opportunity/fields/Negotiation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Amount__c</fullName>
    <description>Amount when first entered Negotiation stage</description>
    <inlineHelpText>Amount when first entered Negotiation stage</inlineHelpText>
    <label>Negotiation - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>