force-app/main/default/objects/Opportunity/fields/Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Date__c</fullName>
    <description>Date first entered Negotiation stage</description>
    <inlineHelpText>Date first entered Negotiation stage</inlineHelpText>
    <label>Negotiation - Date</label>
    <type>DateTime</type>
</CustomField>