force-app/main/default/objects/Opportunity/fields/Negotiation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Duration__c</fullName>
    <description>Number of days in Negotiation stage</description>
    <inlineHelpText>Number of days in Negotiation stage</inlineHelpText>
    <label>Negotiation - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>