force-app/main/default/objects/Opportunity/fields/Negotiation_Entries__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of times entered Negotiation stage</description>
    <inlineHelpText>Count of times entered Negotiation stage</inlineHelpText>
    <label>Negotiation - Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>