force-app/main/default/objects/Opportunity/fields/New_Country_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Country_Request__c</fullName>
    <description>to document deals on new countries offered post feedback on Project empower</description>
    <inlineHelpText>Select Y if we are hiring in a new country, N otherwise.</inlineHelpText>
    <label>New Country Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>