force-app/main/default/objects/Opportunity/fields/Number_of_Oyster_Scale_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Oyster_Scale_Products__c</fullName>
    <description>Used for &quot;Opportunity - Create Renewal for Scale Opps&quot; flow</description>
    <label>Number of Oyster Scale Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>Oyster Scale</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>