force-app/main/default/objects/Opportunity/fields/Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats__c</fullName>
    <description>For use when Product Name = Oyster Scale</description>
    <label>Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>