force-app/main/default/objects/Opportunity/fields/Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Obstacles__c</fullName>
    <label>Obstacles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>