force-app/main/default/objects/Opportunity/fields/of_EOR_Products__c.field-meta.xml
<CustomField>
    <fullName>of_EOR_Products__c</fullName>
    <description>Number of Opp Products that start with &quot;Tier&quot;</description>
    <label># of EOR Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>startsWith</operation>
        <value>Tier</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>