force-app/main/default/objects/Opportunity/fields/of_Obstacles__c.field-meta.xml
<CustomField>
    <fullName>of_Obstacles__c</fullName>
    <label># of Obstacles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>