force-app/main/default/objects/Opportunity/fields/of_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Opportunity_Products__c</fullName>
    <label># of Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>