force-app/main/default/objects/Opportunity/fields/of_TMs_planned_to_hire_formula__c.field-meta.xml
<CustomField>
    <fullName>of_TMs_planned_to_hire_formula__c</fullName>
    <description>Used for Super Round Robin.  Converts the &quot;# of FTEs planned to hire&quot; picklist value to a number.  Note that if &quot;20+&quot; is selected, this formula will return 21.</description>
    <formula>IF(ISPICKVAL(How_many_TM__c, &quot;20+&quot;), 21,VALUE(TEXT(How_many_TM__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of FTEs planned to hire (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>