force-app/main/default/objects/Opportunity/fields/Opp_ARR_2__c.field-meta.xml
<CustomField>
    <fullName>Opp_ARR_2__c</fullName>
    <formula>Amount *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp ARR 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>