force-app/main/default/objects/Opportunity/fields/Opp_origin_type__c.field-meta.xml
<CustomField>
    <fullName>Opp_origin_type__c</fullName>
    <description>for BDRs to enter what triggered the opportunity creation</description>
    <inlineHelpText>for BDRs to enter what triggered the opportunity creation</inlineHelpText>
    <label>Opportunity origin type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>LinkedIn InMail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>AE Outbound</fullName>
                <isActive>false</isActive>
                <label>AE Outbound</label>
            </value>
            <value>
                <fullName>Outbound influenced</fullName>
                <isActive>false</isActive>
                <label>Outbound influenced</label>
            </value>
            <value>
                <fullName>Video Prospecting</fullName>
                <isActive>false</isActive>
                <label>Video Prospecting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>