force-app/main/default/objects/Opportunity/fields/Opportunity_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ARR__c</fullName>
    <description>2/27:  Removed the case &quot; &quot;Churn/Contraction Risk&quot;, IF(INCLUDES(Product_Name__c,&quot;Oyster Scale&quot;) || INCLUDES(Product_Name__c,&quot;Salary Insights&quot;),Amount, Amount * 12),&quot;</description>
    <formula>CASE(RecordType.Name,
    &quot;Organic Growth&quot;, Amount * 12,
    &quot;Expansion&quot;, IF(INCLUDES(Product_Name__c,&quot;Oyster Scale&quot;) || INCLUDES(Product_Name__c,&quot;Salary Insights&quot;),Amount, Amount * 12),   
    Amount
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>