force-app/main/default/objects/Opportunity/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://anywhere05.lightning.force.com/lightning/r/Opportunity/&quot;&amp;Id&amp;&quot;/view&quot; ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>