force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Division__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Division</label>
    <type>Text</type>
</CustomField>