force-app/main/default/objects/Opportunity/fields/Opportunity_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ownership__c</fullName>
    <label>Opportunity Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oyster</fullName>
                <default>true</default>
                <label>Oyster</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>