force-app/main/default/objects/Opportunity/fields/Opportunity_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type_Details__c</fullName>
    <label>Opportunity Type Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>