force-app/main/default/objects/Opportunity/fields/Other_Churn_Contraction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Churn_Contraction_Reason__c</fullName>
    <label>Other Churn/Contraction Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>