force-app/main/default/objects/Opportunity/fields/Other_Reason_to_Request_ProS__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_to_Request_ProS__c</fullName>
    <label>Other Reason to Request ProS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>