force-app/main/default/objects/Opportunity/fields/Owner_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_Date__c</fullName>
    <label>Owner Assigned Date</label>
    <type>Date</type>
</CustomField>