force-app/main/default/objects/Opportunity/fields/Owner_Changed_by_BDR__c.field-meta.xml
<CustomField>
    <fullName>Owner_Changed_by_BDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by a flow when the opportunity owner is changed by a BDR.  Prevents opportunity from being reassigned by Super Round Robin.</description>
    <label>Owner Changed by BDR</label>
    <type>Checkbox</type>
</CustomField>