force-app/main/default/objects/Opportunity/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <description>Region of the Owner of the Opportunity</description>
    <formula>Owner.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>