force-app/main/default/objects/Opportunity/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>For reporting. The Role of the Opportunity Owner</description>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting. The Role of the Opportunity Owner</inlineHelpText>
    <label>Owner Role (formula)</label>
    <type>Text</type>
</CustomField>