force-app/main/default/objects/Opportunity/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <inlineHelpText>The challenges that brought the prospect your way</inlineHelpText>
    <label>Pain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>