force-app/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the partner involved in the deal.</inlineHelpText>
    <label>Partner (transactional)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected is not set up as a partner account. Reach out to the partner team or rev ops.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (via Partner)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>