force-app/main/default/objects/Opportunity/fields/Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category__c</fullName>
    <formula>TEXT(Account.Partner_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Partner Account&apos;s Partner Category field value</inlineHelpText>
    <label>Partner Category</label>
    <type>Text</type>
</CustomField>