force-app/main/default/objects/Opportunity/fields/Partner_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Partner_Closed_Lost_Reason__c</fullName>
    <label>Partner Closed Lost Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>