force-app/main/default/objects/Opportunity/fields/Partner_context__c.field-meta.xml
<CustomField>
    <fullName>Partner_context__c</fullName>
    <inlineHelpText>Explain the role or contribution of the partner in the context of this deal.</inlineHelpText>
    <label>Partner context (transactional)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>