force-app/main/default/objects/Opportunity/fields/Partner_Context_strategic__c.field-meta.xml
<CustomField>
    <fullName>Partner_Context_strategic__c</fullName>
    <inlineHelpText>Explain the role or contribution of the partner in the context of this deal.</inlineHelpText>
    <label>Partner Context (strategic)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>