force-app/main/default/objects/Opportunity/fields/Partner_Involvement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the partner&apos;s involvement has been formally approved - Only for Leadership.</inlineHelpText>
    <label>Partner Involvement Approved</label>
    <type>Checkbox</type>
</CustomField>