force-app/main/default/objects/Opportunity/fields/Partner_Involvement_date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_date__c</fullName>
    <inlineHelpText>Enter the date when the partner got involved in the deal.</inlineHelpText>
    <label>Partner Involvement Date (transactional)</label>
    <type>Date</type>
</CustomField>