force-app/main/default/objects/Opportunity/fields/Partner_Involvement_Date_strategic__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Date_strategic__c</fullName>
    <inlineHelpText>Enter the date when the partner got involved in the deal.</inlineHelpText>
    <label>zPartner Involvement Date (strategic)</label>
    <type>Date</type>
</CustomField>