force-app/main/default/objects/Opportunity/fields/Partner_Involvement_Detail_strategic__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Detail_strategic__c</fullName>
    <label>Partner Involvement Detail (strategic)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Led</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Marketing Lead</fullName>
            </value>
            <value>
                <fullName>Referring Existing Lead</fullName>
            </value>
            <value>
                <fullName>Partner Network</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Account is a Partner</fullName>
            </value>
            <value>
                <fullName>Value Added Services or Solutions</fullName>
            </value>
            <value>
                <fullName>Recommendation \ Referrence</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>Campaign Activation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VC Outbound Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>