force-app/main/default/objects/Opportunity/fields/Partner_Involvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Type__c</fullName>
    <inlineHelpText>Specify the nature of the partner&apos;s involvement.</inlineHelpText>
    <label>Partner Involvement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Generated</fullName>
            </value>
            <value>
                <fullName>Partner Converted</fullName>
            </value>
            <value>
                <fullName>Partner Influence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>