force-app/main/default/objects/Opportunity/fields/Partner_Involvement_Type_strategic__c.field-meta.xml
<CustomField>
    <fullName>Partner_Involvement_Type_strategic__c</fullName>
    <label>Partner Involvement Type (strategic)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Generated</fullName>
            </value>
            <value>
                <fullName>Partner Converted</fullName>
            </value>
            <value>
                <fullName>Partner Influence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>