force-app/main/default/objects/Opportunity/fields/Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager__c</fullName>
    <description>Account owner of the account in the Partner field</description>
    <formula>Partner__r.Owner.FirstName + &quot; &quot; + Partner__r.Owner.LastName</formula>
    <inlineHelpText>Provide the name of the person responsible for managing the relationship with the partner.</inlineHelpText>
    <label>Partner Manager (transactional)</label>
    <type>Text</type>
</CustomField>