force-app/main/default/objects/Opportunity/fields/Partner_Manager_Quota__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager_Quota__c</fullName>
    <formula>Partner__r.Owner.Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Manager Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>