force-app/main/default/objects/Opportunity/fields/Partner_Manager_strategic__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager_strategic__c</fullName>
    <formula>Partner_strategic__r.Owner.FirstName + &quot; &quot; + Partner_strategic__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Manager (strategic)</label>
    <type>Text</type>
</CustomField>