force-app/main/default/objects/Opportunity/fields/Partner_s_involvement__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_involvement__c</fullName>
    <label>Partner&apos;s involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cosell</fullName>
            </value>
            <value>
                <fullName>Marketing Lead</fullName>
            </value>
            <value>
                <fullName>Partner Influenced</fullName>
            </value>
            <value>
                <fullName>Partner Led</fullName>
            </value>
            <value>
                <fullName>Partner Network</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>